--- a/Demo/DLPanableWebViewDemo/Base.lproj/Main.storyboard
+++ b/Demo/DLPanableWebViewDemo/Base.lproj/Main.storyboard
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="wFv-WA-xvi">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="wFv-WA-xvi">
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
     </dependencies>
     <scenes>
@@ -55,7 +56,7 @@
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <connections>
                                     <outlet property="delegate" destination="lLq-kJ-ojB" id="hVA-FP-qu7"/>
-                                    <outlet property="panDelegate" destination="lLq-kJ-ojB" id="1p3-DM-dA1"/>
+                                    <outlet property="panDelegate" destination="lLq-kJ-ojB" id="Ux9-Y2-k1i"/>
                                 </connections>
                             </webView>
                         </subviews>
